--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Based on current events and the increasing education disparity, many presumption
               <div class="container">
                   <div class="row">
                       <div class="col-lg-12">
-                          Copyright &copy; Your Website 2016
+                          Copyright &copy; InvestiChat 2016
                       </div>
                   </div>
               </div>
